crates/picus/tests/ui/no_core_alias.rs
//! Root-level `picus::core` re-export was removed.
use picus::core;

fn main() {
    let _ = core::PicusPlugin;
}
